; (executable
;  (name gen_ccflags)
;  (modules gen_ccflags)
;  (libraries str))

; (rule
;  (targets pre-flags post-flags)
;  (deps gen_ccflags.exe)
;  (action
;   (run %{deps} "%{ocaml-config:ccomp_type}" %{targets})))

; (rule
;  (targets ocamlmerlin.exe)
;  (deps
;   (:c ocamlmerlin.c)
;   pre-flags
;   post-flags)
;  (action
;   (run
;    %{cc}
;    "%{read-lines:pre-flags}%{targets}"
;    %{c}
;    %{read-lines:post-flags})))

(library
 (name ocamlmerlin)
 (public_name merlin.ocamlmerlin)
 (libraries)
 (foreign_stubs
  (language c)
  (names ocamlmerlin))
 (modules ocamlmerlin))
