(rule
 (copy# ../../extend/extend_helper.ml extend_helper.ml))

(rule
 (copy# ../../extend/extend_helper.mli extend_helper.mli))

(library
 (name merlin_parsing)
 (public_name merlin.parsing)
 (flags
  -open
  Merlin_merlin_utils
  -open
  Merlin_utils
  (:standard -w -9))
 (modules_without_implementation asttypes parsetree)
 (libraries merlin_merlin_utils merlin_utils))
